# bloom-filter

./: Cargo.toml  README.md
src/: bitset.rs  bloom.rs  lib.rs
