[package]
name = "bloom-filter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
serde = ["serde", "serde_bytes", "serde_derive"]

[dependencies]
serde = { version = "1.0.114", optional = true }
serde_derive = { version = "1.0.114", optional = true }
serde_bytes = { version = "0.11.5", optional = true }
